--- a/Realesrgan/App.config
+++ b/Realesrgan/App.config
@@ -16,6 +16,9 @@
             <setting name="PREVIEW" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="TOP" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Realesrgan.Properties.Settings>
     </userSettings>
 </configuration>
