--- a/Realesrgan/Properties/Settings.settings
+++ b/Realesrgan/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="PREVIEW" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="TOP" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
