--- a/Realesrgan/packages.config
+++ b/Realesrgan/packages.config
@@ -4,6 +4,8 @@
   <package id="MediaInfo.Wrapper" version="21.9.3" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="Microsoft.WindowsAPICodePack.Core" version="1.1.0" targetFramework="net48" />
+  <package id="Microsoft.WindowsAPICodePack.Shell" version="1.1.0" targetFramework="net48" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net48" />
   <package id="SkiaSharp" version="2.88.8" targetFramework="net48" />
   <package id="SkiaSharp.NativeAssets.macOS" version="2.88.8" targetFramework="net48" />
